# gen/http/openapi.yaml
@@ -40,6 +40,20 @@ paths:
             $ref: '#/definitions/UserGetResponseBody'
       schemes:
       - http
+  /user2:
+    get:
+      tags:
+      - user
+      summary: get2 user
+      description: Returns User details
+      operationId: user#get2
+      responses:
+        "200":
+          description: OK response.
+          schema:
+            $ref: '#/definitions/UserGet2ResponseBodyV1'
+      schemes:
+      - http
 definitions:
   CompanyResponseBody:
     title: 'Mediatype identifier: application/vnd.user.company; view=default'
@@ -48,20 +62,20 @@ definitions:
       id:
         type: integer
         description: ID is the unique id of the company
-        example: 17776535235150124829
+        example: 13402860684812647254
         format: int64
       location:
         type: string
         description: Location of company
-        example: Illo rerum consequatur tempore quos fuga.
+        example: Consectetur ullam ullam sed pariatur alias.
       name:
         type: string
         description: Name of company
-        example: Itaque minima.
+        example: Dolores nihil aperiam ut et.
     example:
-      id: 12184989828510224327
-      location: In dolor.
-      name: At aut harum.
+      id: 9000073761637731431
+      location: Aut provident ducimus impedit.
+      name: Dicta consequatur a.
     required:
     - id
     - name
@@ -73,11 +87,31 @@ definitions:
       name:
         type: string
         description: Name of company
-        example: Ut non ex saepe.
+        example: In dolor.
     description: CompanyResponseBodyTiny result type (default view)
     example:
-      name: Est necessitatibus ipsum dolorem maiores harum.
+      name: Eveniet et inventore voluptates necessitatibus quos nobis.
     required:
+    - name
+  UserGet2ResponseBodyV1:
+    title: 'Mediatype identifier: application/vnd.user.user; view=v1'
+    type: object
+    properties:
+      id:
+        type: integer
+        description: ID is the unique id of the user
+        example: 9565239557388543372
+        format: int64
+      name:
+        type: string
+        description: Name of user
+        example: Ipsum dolorem maiores harum hic omnis itaque.
+    description: Get2ResponseBody result type (v1 view) (default view)
+    example:
+      id: 4543473614913575318
+      name: Illo rerum consequatur tempore quos fuga.
+    required:
+    - id
     - name
   UserGetResponseBody:
     title: 'Mediatype identifier: application/vnd.user.user; view=default'
@@ -89,42 +123,42 @@ definitions:
           $ref: '#/definitions/CompanyResponseBody'
         description: all companies user worked at
         example:
-        - id: 14866265708109114846
-          location: Rem similique praesentium officia quas eos consectetur.
-          name: Dolorum dolor.
-        - id: 14866265708109114846
-          location: Rem similique praesentium officia quas eos consectetur.
-          name: Dolorum dolor.
-        - id: 14866265708109114846
-          location: Rem similique praesentium officia quas eos consectetur.
-          name: Dolorum dolor.
+        - id: 15652828213867574851
+          location: Et deleniti voluptates deserunt.
+          name: Saepe blanditiis vitae quasi.
+        - id: 15652828213867574851
+          location: Et deleniti voluptates deserunt.
+          name: Saepe blanditiis vitae quasi.
+        - id: 15652828213867574851
+          location: Et deleniti voluptates deserunt.
+          name: Saepe blanditiis vitae quasi.
       id:
         type: integer
         description: ID is the unique id of the user
-        example: 4541291723951065211
+        example: 12184989828510224327
         format: int64
       latestCompany:
         $ref: '#/definitions/CompanyResponseBodyTiny'
       name:
         type: string
         description: Name of user
-        example: Et quod et vitae quo.
+        example: At aut harum.
     description: GetResponseBody result type (default view)
     example:
       companies:
-      - id: 14866265708109114846
-        location: Rem similique praesentium officia quas eos consectetur.
-        name: Dolorum dolor.
-      - id: 14866265708109114846
-        location: Rem similique praesentium officia quas eos consectetur.
-        name: Dolorum dolor.
-      - id: 14866265708109114846
-        location: Rem similique praesentium officia quas eos consectetur.
-        name: Dolorum dolor.
-      id: 4521775199469539710
+      - id: 15652828213867574851
+        location: Et deleniti voluptates deserunt.
+        name: Saepe blanditiis vitae quasi.
+      - id: 15652828213867574851
+        location: Et deleniti voluptates deserunt.
+        name: Saepe blanditiis vitae quasi.
+      - id: 15652828213867574851
+        location: Et deleniti voluptates deserunt.
+        name: Saepe blanditiis vitae quasi.
+      id: 4727653150976900082
       latestCompany:
-        name: Est esse debitis quam laudantium eaque.
-      name: Inventore voluptates necessitatibus quos nobis.
+        name: Praesentium officia quas eos consectetur.
+      name: Dolor molestiae accusantium reprehenderit assumenda maxime.
     required:
     - id
     - name
